apagado linha do Jquery 3.1.1 do index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>  
+    <!-- <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>   -->
 
+    <script src="js/jquery.min.js"></script>
     <script src="https://rtcmulticonnection.herokuapp.com/dist/RTCMultiConnection.min.js"></script>
     <script src="https://rtcmulticonnection.herokuapp.com/socket.io/socket.io.js"></script>
 
